fix z-index on header so Bootstrap content slide under navbar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@400;600;900&display=swap");
 
-.navbar {
-  position: fixed !important;
-  background-color: white;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  width: 100%;
-}
 .mr-auto {
   font-family: "Helvetica", sans-serif;
 }
@@ -29,6 +21,7 @@
   left: 0;
   display: flex;
   align-items: center;
+  z-index: 1;
   justify-content: space-between;
   width: 100%;
   height: 138px;
